src/objects/Subscription_Line__c.object
<CustomObject>
    <description>Object to manage products / elements of a subscription</description>
    <fields>
        <fullName>Active_Site_Product_Count__c</fullName>
        <inlineHelpText>Count of Site Products in Active Subscription Sites</inlineHelpText>
        <label>Active Site Product Count</label>
        <summaryForeignKey>Site_Product__c.Subscription_Line__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credited_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Financial transaction objects code</description>
        <label>Credited Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_Delivery_Number_of_Licences__c</fullName>
        <label>E-Delivery: Number of Licences</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Edit_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International_Product_Count__c</fullName>
        <description>Denotes this subscription line is associated to an international product</description>
        <formula>IF( Product__r.International_Product__c = True, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If true then this subscription line is associated to an international product</inlineHelpText>
        <label>International Product Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Paid_Date__c</fullName>
        <label>Invoice Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <label>Invoice Status</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not-Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lapse_Days_Number__c</fullName>
        <label>Lapse Days (Number)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lapse_Days__c</fullName>
        <description>Calculates lapse days based on product information</description>
        <formula>Product__r.Lapse_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates lapse days based on product information</inlineHelpText>
        <label>Lapse Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPL_ID__c</fullName>
        <label>OPL ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ongoing_Renewal_Price__c</fullName>
        <inlineHelpText>If filled out when this product renews this value (UNIT PRICE) will be used for EVERY future renewal.</inlineHelpText>
        <label>Ongoing Renewal Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PK_CB_MEL_ID__c</fullName>
        <description>This is the Primary Key of the Membership Period from the source Membership Period data and maps to MEMBER_PERIOD.MEP_ID from the Membership_Period table in the CB database.

Changed field label for data migration.</description>
        <externalId>true</externalId>
        <inlineHelpText>Maps to MEMBER_PERIOD.MEP_ID from CB 
NOTE**
(for benefit products the MXPREF_ID from the Member_Prod_XRef table may also be appended to the end)</inlineHelpText>
        <label>PK_CB_MEP_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Previous_Subscription_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Subscription Line</label>
        <referenceTo>Subscription_Line__c</referenceTo>
        <relationshipLabel>Subscription Lines</relationshipLabel>
        <relationshipName>Previous_Subscription_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pro_Rata_Start_Date__c</fullName>
        <inlineHelpText>If a subs line is pro-rata, enter the start date here</inlineHelpText>
        <label>Pro-Rata Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Sales_Price__c</fullName>
        <description>Will auto populated on creation of subs lines - with sales price from opp product line</description>
        <inlineHelpText>Opportunity Product Line Sales Price</inlineHelpText>
        <label>Product Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Subscription Lines</relationshipLabel>
        <relationshipName>Subscription_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Available__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Available</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reminder_Days_Number__c</fullName>
        <label>Reminder Days (Number)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reminder_Days__c</fullName>
        <description>Calculates reminder days based on product information</description>
        <formula>Product__r.Initial_Reminder_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates reminder days based on product information</inlineHelpText>
        <label>Reminder Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Price__c</fullName>
        <inlineHelpText>Fill this out with a UNIT PRICE if you want to change the renewal price for this product for the very NEXT RENEWAL ONLY.</inlineHelpText>
        <label>Next Renewal Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Quantity__c</fullName>
        <inlineHelpText>This displays the quantity that will renewed as part of the renewal process. If this is blank the current quantity is used.</inlineHelpText>
        <label>Renewal Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Subscription Lines</relationshipLabel>
        <relationshipName>Subscription_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tmpUpd__c</fullName>
        <label>tmpUpd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Subscription Line</label>
    <nameField>
        <displayFormat>SL-{0000000}</displayFormat>
        <label>Subscription Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Next_Renewal_Price_CANNOT_be_blank</fullName>
        <active>true</active>
        <description>If the Ongoing Renewal Price is populated</description>
        <errorConditionFormula>AND(Ongoing_Renewal_Price__c &gt;= 0,  
 ISBLANK(Renewal_Price__c))</errorConditionFormula>
        <errorDisplayField>Renewal_Price__c</errorDisplayField>
        <errorMessage>Next Renewal Price cannot be blank if Ongoing Renewal Price is populated.  Please enter.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Renewal_Qty_cant_be_more_than_Sub_Qty</fullName>
        <active>true</active>
        <errorConditionFormula>Quantity__c &lt; Renewal_Quantity__c</errorConditionFormula>
        <errorDisplayField>Renewal_Quantity__c</errorDisplayField>
        <errorMessage>You can&apos;t have a renewal quantity greater than the subscription line quantity.</errorMessage>
    </validationRules>
</CustomObject>